@@ -31,25 +31,26 @@ public class ProductController {
                                                          @RequestParam(required = false, name = "filterList") String filterStringList,
                                                          @PageableDefault(page = 0, size = 10,sort = "productId", direction = Sort.Direction.ASC) Pageable pageable) {
 
-        if (productName != null) {
-            if(productName.equals("undefined")) productName = "";
-        }
         List<FilterRequestDto> filterDtoList = new ArrayList<>();
 
         if(filterStringList != null) {
-            List<String> filterStringList2 = Arrays.asList(filterStringList.split("----"));
-            if(filterStringList.isEmpty()) {
-                for (String filter : filterStringList2) {
-                    List<String> list = List.of(filter.split("---"));
-                    if (!list.get(1).isEmpty()) {
-                        filterDtoList.add(FilterRequestDto.builder()
-                                .filterName(list.get(0))
-                                .filterList(List.of(list.get(1).split("--")))
-                                .build());
+            if(filterStringList != "") {
+                List<String> filterStringList2 = List.of(filterStringList.split("__"));
+                if (!filterStringList2.isEmpty()) {
+                    for (String filter : filterStringList2) {
+                        List<String> list = List.of(filter.split(":"));
+                        if (!list.get(1).isEmpty()) {
+                            filterDtoList.add(FilterRequestDto.builder()
+                                    .filterName(list.get(0))
+                                    .filterList(List.of(list.get(1).split(",")))
+                                    .build());
+                        }
                     }
                 }
             }
         }
+
+        System.out.println(filterDtoList);
 
         return ResponseEntity.status(HttpStatus.OK).body( productService.findAllProducts(productName, filterDtoList, pageable) );
     }
